--- a/module-6/about.html
+++ b/module-6/about.html
@@ -72,15 +72,15 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A sequi eum cumque odit temporibus obcaecati, molestiae, animi. Dolore dolorum laboriosam ea facilis provident officia, repellat soluta quibusdam quia? Fuga nihil porro soluta debitis, consectetur repudiandae perferendis praesentium itaque accusamus suscipit eos incidunt quidem vitae adipisci facere eaque animi eius laborum sequi asperiores sed, possimus aut repellendus ipsum laudantium. Nisi repellat minus ex. Incidunt ab veniam accusantium quod aliquam necessitatibus delectus fugit similique ullam optio eaque, id voluptate! Vero architecto sint, error quam ducimus expedita? Quae sed, sequi veritatis deserunt maiores, excepturi vero aliquam a illo atque vel ratione amet saepe.</p>
 			<div class="content">
 				<ul>
-					<li>Lorem ipsum dolor.</li>
-					<li>Voluptate, explicabo!</li>
-					<li>Officiis, similique.</li>
-					<li>Assumenda, autem!</li>
-					<li>Iusto, similique.</li>
-					<li>Enim, vitae, nulla?</li>
-					<li>Sint, molestias, officia.</li>
-					<li>Praesentium culpa!</li>
-					<li>Rerum, delectus, odit!</li>
+					<li class="col-6">Lorem ipsum dolor.</li>
+					<li class="col-6">Voluptate, explicabo!</li>
+					<li class="col-6">Officiis, similique.</li>
+					<li class="col-6">Assumenda, autem!</li>
+					<li class="col-6">Iusto, similique.</li>
+					<li class="col-6">Enim, vitae, nulla?</li>
+					<li class="col-6">Sint, molestias, officia.</li>
+					<li class="col-6">Praesentium culpa!</li>
+					<li class="col-6">Rerum, delectus, odit!</li>
 				</ul>
 			</div>
 		</article>
