--- a/module-9/about.html
+++ b/module-9/about.html
@@ -116,10 +116,13 @@
 			<h4 class="text-center col-12">Mark Jonson</h4>
 			<p class="text-center">Lorem ipsum dolor sit amet.</p>
 		</aside>
+        <div class="strela">
+            <a href="#" title="Вернуться к началу" class="topbutton"></a>
+        </div>		
 	</main>
 <footer class="container">
     <div class="footer-container row">
-        <ul class="footer col-12 col-md-12 col-lg-12 justify-content-center">
+        <ul class="footer col-9 col-md-12 col-lg-12 justify-content-center">
             <li>
                 <a href="#">FAQS PAGE</a>
             </li>
