--- a/module-9/about.html
+++ b/module-9/about.html
@@ -55,67 +55,80 @@
         </div>
     </nav>
 </header>
-	<main  class="main main-about container">
-		<section class="row justify-content-center">
-			<h2 class="col-12">AGENCY PROFILE</h2>
-			<div class="col-12 about-image align-items-center">
-				<img class="ny-image" src="img/NY.jpg" alt="New Year">
-			</div>
-			<div class="col-12 section-about">	
-				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, modi.</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aperiam distinctio porro quod quo exercitationem consectetur, placeat, ipsum totam temporibus incidunt, neque deserunt. Aperiam nam assumenda necessitatibus, dignissimos architecto eligendi! Nesciunt placeat, assumenda quidem earum ducimus, inventore obcaecati iste commodi! Aut molestias ea dolore, ut ducimus, ab suscipit nobis dolor, saepe sint nesciunt animi? Exercitationem rerum, consectetur beatae a officiis est, quibusdam consequatur itaque veniam ratione, placeat tempore, harum vitae suscipit totam reiciendis esse! In numquam cum quidem temporibus consequatur ea magni sit aut ullam perspiciatis corporis inventore aspernatur qui dolores, nobis iusto accusamus, natus esse pariatur nostrum libero vitae sapiente. Voluptate, distinctio labore adipisci ullam quo dolores quisquam necessitatibus deserunt ex temporibus sunt aliquam odit earum sapiente autem soluta officiis inventore alias accusantium accusamus asperiores nam. Maiores similique deleniti dolor incidunt eligendi accusamus nesciunt perspiciatis aspernatur, impedit fugiat iure, minima reprehenderit. Magnam, animi, laborum. Nihil consectetur facere at quisquam.
-				</p>
-			</div>
-		</section>
-		<aside class="row aside-about">
-			<h2 class="col-12">OUR PRINCIPLES</h2>
-			<div class="row our-principes">
-				<div class="col-12">
-					<h4 class="circle">Lorem ipsum.</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
-				</div>
-				<div class="col-12">
-					<h4 class="circle">Lorem ipsum.</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
-				</div>
-				<div class="col-12">
-					<h4 class="circle">Lorem ipsum.</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
-				</div>
-			</div>
-		</aside>
+	<main class="main main-about container">
+        <div class="row">
+            <div class="col-12 col-md-12 col-lg-9">
+        		<section class="row justify-content-center">
+        			<h2 class="col-12">AGENCY PROFILE</h2>
+        			<div class="col-12 col-md-6 about-image align-items-center">
+        				<img class="ny-image" src="img/NY.jpg" alt="New Year">
+        			</div>
+        			<div class="col-12 col-md-6 section-about">	
+        				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, modi.</h4>
+        				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non aperiam distinctio porro quod quo exercitationem consectetur, placeat, ipsum totam temporibus incidunt, neque deserunt. Aperiam nam assumenda necessitatibus, dignissimos architecto eligendi! Nesciunt placeat, assumenda quidem earum ducimus, inventore obcaecati iste commodi! Aut molestias ea dolore, ut ducimus, ab suscipit nobis dolor, saepe sint nesciunt animi? Exercitationem rerum, consectetur beatae a officiis est, quibusdam consequatur itaque veniam ratione, placeat tempore.
+        				</p>
+                    </div>
+                    <div class="col-md-12 bottom-section-about d-none d-md-block">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore ipsam fugit vero, autem asperiores accusamus ea unde magni, distinctio excepturi, minus amet repudiandae debitis nulla voluptatem earum deleniti error reiciendis culpa ut incidunt sunt. Omnis at minima non porro ullam hic delectus beatae eligendi rerum voluptatibus ratione tempora modi vitae architecto doloribus molestiae, nesciunt aperiam doloremque magni vero alias corporis. Ea cupiditate nostrum aliquid, repellendus, voluptate numquam expedita quod quasi. Dolore facere odit eaque quas dolorum, omnis illo minima mollitia minus ratione, alias, rem excepturi qui aliquid doloremque odio suscipit. Culpa laboriosam eveniet doloremque veniam quae sit quia unde, tempora!
+                        </p>
+                    </div>
+        		</section>
+            </div>
+            <div class="col-12 col-md-12 col-lg-3">
+        		<aside class="row aside-about">
+        			<h2 class="col-12">OUR PRINCIPLES</h2>
+        			<div class="row our-principes">
+        				<div class="col-12 col-md-4 col-lg-12">
+        					<h4 class="circle">Lorem ipsum.</h4>
+        					<p class="relative-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
+        				</div>
+        				<div class="col-12 col-md-4 col-lg-12">
+        					<h4 class="circle">Lorem ipsum.</h4>
+        					<p class="relative-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
+        				</div>
+        				<div class="col-12 col-md-4 col-lg-12">
+        					<h4 class="circle">Lorem ipsum.</h4>
+        					<p class="relative-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repudiandae, maxime pariatur sunt ipsum consectetur.</p>
+        				</div>
+        			</div>
+        		</aside>
+            </div>
+        </div>
 		<hr>
 		<article class="row offer-about">
-			<h2 class="col-12">WHAT WE OFFER</h2>
-			<div class="col-12">
+			<div class="col-12 col-md-9">
+                <h2>WHAT WE OFFER</h2>
 				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, vero, deleniti. Nihil at facilis hic, laudantium optio labore reiciendis porro veritatis eos vero autem, delectus voluptas, officiis ratione rerum fugiat, perferendis qui consequuntur quod.</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A sequi eum cumque odit temporibus obcaecati, molestiae, animi. Dolore dolorum laboriosam ea facilis provident officia, repellat soluta quibusdam quia? Fuga nihil porro soluta debitis, consectetur repudiandae perferendis praesentium itaque accusamus suscipit eos incidunt quidem vitae adipisci facere eaque animi eius laborum sequi asperiores sed, possimus aut repellendus ipsum laudantium. Nisi repellat minus ex. Incidunt ab veniam accusantium quod aliquam necessitatibus delectus fugit similique ullam optio eaque, id voluptate! Vero architecto sint, error quam ducimus expedita?</p>
+			    <div class="content row">
+    				<ul class="row">
+    					<li class="col-6">Lorem ipsum dolor.</li>
+    					<li class="col-6">Voluptate, explicabo!</li>
+    					<li class="col-6">Officiis, similique.</li>
+    					<li class="col-6">Assumenda, autem!</li>
+    					<li class="col-6">Iusto, similique.</li>
+    					<li class="col-6">Enim, vitae, nulla?</li>
+    					<li class="col-6">Sint, molestias, officia.</li>
+    					<li class="col-6">Praesentium culpa!</li>
+    					<li class="col-6">Rerum, delectus, odit!</li>
+    				</ul>
+                </div>
 			</div>
-			<div class="content row">
-				<ul class="row">
-					<li class="col-6">Lorem ipsum dolor.</li>
-					<li class="col-6">Voluptate, explicabo!</li>
-					<li class="col-6">Officiis, similique.</li>
-					<li class="col-6">Assumenda, autem!</li>
-					<li class="col-6">Iusto, similique.</li>
-					<li class="col-6">Enim, vitae, nulla?</li>
-					<li class="col-6">Sint, molestias, officia.</li>
-					<li class="col-6">Praesentium culpa!</li>
-					<li class="col-6">Rerum, delectus, odit!</li>
-				</ul>
-			</div>
+            <div class="col-12 col-md-3">
+                <aside class="row aside-about-bubble justify-content-center">
+                    <h2>TESTIMONIAL</h2>
+                    <div class="bubble">  
+                        <p class="bubble-text">
+                            "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem."
+                        </p>
+                    </div>
+                    <br>
+                    <h4 class="text-center col-12">Mark Jonson</h4>
+                    <p class="text-center">Lorem ipsum dolor sit amet.</p>
+                </aside>
+            </div>
 		</article>
-		<aside class="row aside-about justify-content-center">
-			<h2 class="col-12">TESTIMONIAL</h2>
-			<div class="bubble col-8">	
-				<p class="bubble-text">
-					"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minima, facilis ab odio magni, est rem deserunt beatae quidem est rem deserunt beatae quidem ipsum dolor sit ipsum dolor sit."
-				</p>
-			</div>
-			<br>
-			<h4 class="text-center col-12">Mark Jonson</h4>
-			<p class="text-center">Lorem ipsum dolor sit amet.</p>
-		</aside>
+
         <div class="strela">
             <a href="#" title="Вернуться к началу" class="topbutton"></a>
         </div>		
