--- a/module-10/index.html
+++ b/module-10/index.html
@@ -10,7 +10,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
-
 <body>
 	<header class="header">
 		<nav>	
@@ -35,7 +34,7 @@
 				<li class="menu__item">
 					<a href="gallery.html">GALLERY</a>
 				</li>
-				<li class="logo_item">
+				<li class="logo__item">
 					<a href="#" class="logo">JOURNEY</a>
 				</li>
 				<li class="menu__item">
@@ -54,15 +53,42 @@
 		<section class="content">
 			<h2>OUR GALERRY</h2>
 			<div class="gallery">
-				<div class="image"><img src="img/gallery/img1.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img2.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img3.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img4.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img5.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img6.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img7.jpg" alt=""></div>
-				<div class="image"><img src="img/gallery/img8.jpg" alt=""></div>
-				<div class="last-image image"><img src="img/gallery/img9.jpg" alt=""></div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img1.jpg" alt="">
+				</div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img2.jpg" alt="">
+				</div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img3.jpg" alt="">
+				</div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img4.jpg" alt="">
+				</div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img5.jpg" alt="">
+				</div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img6.jpg" alt="">
+				</div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img7.jpg" alt="">
+				</div>
+				<div class="image">
+					<span class="roll"></span>
+					<img src="img/gallery/img8.jpg" alt="">
+				</div>
+				<div class="last-image image">
+					<span class="roll"></span>
+					<img src="img/gallery/img9.jpg" alt="">
+				</div>
 			</div>
 			<div class="strela">
 				<a href="#" title="Вернуться к началу" class="topbutton"></a>
@@ -72,7 +98,7 @@
 
 	<footer>	
 		<div class="footer-container">
-			<ul class="footer">
+			<ul class="footer-list">
 				<li>
 					<a href="#">FAQS PAGE</a>
 				</li>
@@ -106,12 +132,21 @@
 	</footer>
 	<div class="social-footer">
 		<ul class="icons">
-			<li class="bg-fb bg-same"><a href="#"></a></li>
-			<li class="bg-gp bg-same"><a href="#"></a></li>
-			<li class="bg-ln bg-same"><a href="#"></a></li>
-			<li class="bg-tw bg-same"><a href="#"></a></li>
+			<li class="icons__bg-same"><a href="#">
+				<svg id="Layer_1" version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M29.765,50.32h6.744V33.998h4.499l0.596-5.624h-5.095  l0.007-2.816c0-1.466,0.14-2.253,2.244-2.253h2.812V17.68h-4.5c-5.405,0-7.307,2.729-7.307,7.317v3.377h-3.369v5.625h3.369V50.32z   M34,64C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z" style="fill-rule:evenodd;clip-rule:evenodd;fill:#fff;"/></svg>
+			</a>
+			</li>
+			<li class="icons__bg-same"><a href="#">
+				<svg version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z" style="fill-rule:evenodd;clip-rule:evenodd;fill:#fff;"/></svg>
+			</a></li>
+			<li class="icons__bg-same"><a href="#">
+				<svg version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M38.167,22.283c-2.619,0.953-4.274,3.411-4.086,6.101  l0.063,1.038l-1.048-0.127c-3.813-0.487-7.145-2.139-9.974-4.915l-1.383-1.377l-0.356,1.017c-0.754,2.267-0.272,4.661,1.299,6.271  c0.838,0.89,0.649,1.017-0.796,0.487c-0.503-0.169-0.943-0.296-0.985-0.233c-0.146,0.149,0.356,2.076,0.754,2.839  c0.545,1.06,1.655,2.097,2.871,2.712l1.027,0.487l-1.215,0.021c-1.173,0-1.215,0.021-1.089,0.467  c0.419,1.377,2.074,2.839,3.918,3.475l1.299,0.444l-1.131,0.678c-1.676,0.976-3.646,1.526-5.616,1.567  C20.775,43.256,20,43.341,20,43.405c0,0.211,2.557,1.397,4.044,1.864c4.463,1.377,9.765,0.783,13.746-1.568  c2.829-1.674,5.657-5,6.978-8.221c0.713-1.715,1.425-4.851,1.425-6.354c0-0.975,0.063-1.102,1.236-2.267  c0.692-0.678,1.341-1.419,1.467-1.631c0.21-0.403,0.188-0.403-0.88-0.043c-1.781,0.636-2.033,0.551-1.152-0.402  c0.649-0.678,1.425-1.907,1.425-2.267c0-0.063-0.314,0.042-0.671,0.233c-0.377,0.212-1.215,0.53-1.844,0.72l-1.131,0.361l-1.027-0.7  c-0.566-0.381-1.361-0.805-1.781-0.932C40.766,21.902,39.131,21.944,38.167,22.283z M34,64C17.432,64,4,50.568,4,34  C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z" style="fill-rule:evenodd;clip-rule:evenodd;fill:#fff;"/></svg>
+			</a></li>
+			<li class="icons__bg-same"><a href="#">
+				<svg version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M32.963,35.002c1.609-1.608,1.734-3.845,1.734-5.102  c0-5.051-2.99-12.875-8.796-12.875c-1.81,0-3.77,0.91-4.9,2.31c-1.181,1.468-1.533,3.353-1.533,5.162  c0,4.7,2.714,12.465,8.746,12.465C29.948,36.962,31.833,36.107,32.963,35.002z M4,34c0,7.405,2.683,14.184,7.129,19.415  c0.839-1.41,2.14-2.797,4.066-3.937c4.348-2.664,10.204-3.017,13.37-3.218c-0.98-1.257-2.111-2.589-2.111-4.774  c0-1.182,0.352-1.885,0.704-2.715c-0.779,0.076-1.533,0.151-2.237,0.151c-7.414,0-11.611-5.529-11.611-10.983  c0-3.217,1.483-6.791,4.473-9.377c3.996-3.284,8.746-3.845,12.516-3.845H44.7l-4.474,2.516h-4.322  c1.607,1.329,4.951,4.127,4.951,9.449c0,5.178-2.941,7.615-5.856,9.926c-0.93,0.906-1.96,1.886-1.96,3.418  c0,1.533,1.03,2.389,1.81,3.017l2.513,1.96c3.092,2.564,5.881,4.951,5.881,9.777c0,3.182-1.484,6.376-4.379,8.826  c-1.557,0.255-3.153,0.388-4.781,0.393c2.938-1.289,4.461-3.646,4.461-6.48c0-3.568-2.287-5.453-7.615-9.248  c-0.553-0.051-0.905-0.051-1.608-0.051c-0.628,0-4.398,0.127-7.338,1.106c-1.533,0.553-6.006,2.237-6.006,7.213  c0,0.541,0.058,1.065,0.17,1.569C8.775,52.645,4,43.88,4,34z M61.73,22.532L61.73,22.532c0.44,1.063,0.821,2.159,1.139,3.281  C62.552,24.691,62.171,23.596,61.73,22.532L61.73,22.532L61.73,22.532L61.73,22.532z M34,64C17.432,64,4,50.568,4,34  C4,17.431,17.432,4,34,4c12.507,0,23.227,7.653,27.73,18.532l0,0h-5.966v-7.814h-3.349v7.814h-7.814v3.281h7.814v7.882h3.349v-7.882  h7.104C63.605,28.415,64,31.162,64,34C64,50.568,50.568,64,34,64z" style="fill-rule:evenodd;clip-rule:evenodd;fill:#fff;"/></svg>
+			</a></li>
 		</ul>
-		<span class="social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
+		<span class="social-footer__social-text">Journey © 2013 | Privacy Policy | Website designed by TemplateMonster.com
 		</span>
 	</div>
 
